# sybil-scope

./: .gitignore  README.md  pyproject.toml
docs/: viewer.md
examples/: README.md  __init__.py  advanced_patterns.py  basic_usage.py  generate_sample_traces.py  langchain_integration.py  run_advanced_examples.py  run_all_examples.py  run_basic_examples.py  run_integration_examples.py
examples/advanced/: README.md  __init__.py  async_tracing.py  custom_backend.py  error_tracking.py  multimodal_tracing.py  performance_monitoring.py
examples/basic/: README.md  __init__.py  decorators.py  nested_agents.py  simple_tracing.py
examples/langchain/: README.md  __init__.py  langchain_agent.py  langchain_custom_chain.py  langchain_simple_chain.py  langgraph_agent.py
examples/utilities/: README.md  __init__.py
sybil_scope/: __init__.py  api.py  backend.py  config.py  core.py  decorators.py
sybil_scope/integrations/: __init__.py  langchain.py
sybil_scope/viewer/: __init__.py  __main__.py  app.py  common.py  flow_diagram.py  table_view.py  timeline.py
tests/: __init__.py  test_api.py  test_backend.py  test_core.py  test_decorators.py  test_integration.py  test_viewer.py  test_viewer_app.py  test_viewer_components.py
